1999-03-27  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* po/sv.po
	Updated swedish translation.

	* app/menus.c
	(GNOME) Removed help-browser from help menu. Fixed typo.

	* app/interface.c
	(GNOME) Accelerators in diagrams should work now. 

1999-03-25  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* app/app_procs.c
	* app/commands.c
	* app/defaults.c
	* app/disp_callbacks.c
	* app/display.c
	* app/interface.c
	* app/menus.c
	* app/preferences.c
	* app/render_eps.c
	* lib/diagramdata.c
	* lib/font.c
	* lib/message.c
	* lib/widgets.c
	* objects/ER/*.c
	* objects/UML/*.c
	* objects/network/*.c
	* objects/standard/*.c
	* po/update_pofiles_in.sh
	* po/POFILES.in
	More i18n. All strings (expect rare debug messages) can be
	translated now. Moved intl.h from app to lib. Updated
	update_pofiles_in.sh to check all .c-files.

1999-03-23  Alexander Larsson  <alla@lysator.liu.se>

	* app/disp_callbacks.c (ddisplay_canvas_events):
	Don't drop keys while num-lock, scroll-lock etc is on.

1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* app/render_eps.c (draw_image):
	Fixed exporting of images.
	Still not perfect, but not outright buggy.
	
1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	* po/hu.po:
	Added hungarian translation. By Shooby Ban <bansz@szif.hu>.

	* app/Makefile.am:
	Added $* to the dia call in run_dia.sh

1999-03-22  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>
	
	* lib/color.[ch]:
	Added color_equals() call.

	* objects/standard/arc.c:
	* objects/standard/line.c:
	Don't save unneccesary data.
	
	* objects/standard/box.c:
	* objects/standard/ellipse.c:
	* objects/standard/image.c:
	* objects/standard/polyline.c:
	* objects/standard/zigzagline.c:
	Share properties dialog.
	Don't save unneccesary data.
	
1999-03-22  Seth Alves  <alves@hungry.com>

	* app/menus.c:
	* app/diagram.c:
	* app/display.c:
	small changes so that gnome menus aren't broken
	
1999-03-22  Alexander Larsson  <alla@lysator.liu.se>

	* po/da.po: